[package]
name = "compute"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
async-channel = "1.8.0"
aws-config = "0.55.1"
aws-sdk-lambda = "0.25.1"
axum = "0.6.12"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
sqlx = { version = "0.6.3", features = ["postgres", "macros", "runtime-tokio-rustls", "offline"] }
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["fs", "compression-gzip", "trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
